--- a/package.json
+++ b/package.json
@@ -1,10 +1,5 @@
 {
-  "name": "msemakweli-research",
-  "version": "1.0.0",
-  "description": "Msemakweli Research website",
-  "dependencies": {},
-  "devDependencies": {},
-  "engines": {
-    "node": ">=14.0.0"
+  "devDependencies": {
+    "@gradio/client": "^1.8.0"
   }
-} 
+}
